--- a/angular.json
+++ b/angular.json
@@ -40,13 +40,18 @@
                         "production": {
                             "budgets": [{
                                     "type": "initial",
-                                    "maximumWarning": "500kb",
+                                    "maximumWarning": "500mb",
                                     "maximumError": "1mb"
                                 },
                                 {
                                     "type": "anyComponentStyle",
-                                    "maximumWarning": "2kb",
-                                    "maximumError": "4kb"
+                                    "maximumWarning": "2.5mb",
+                                    "maximumError": "4mb"
+                                },
+                                {
+                                    "type": "any",
+                                    "maximumWarning": "2.5mb",
+                                    "maximumError": "15mb"
                                 }
                             ],
                             "fileReplacements": [{
